{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 64,
  "lineage": "6a985252-0c10-7225-2d60-909f2d3e9724",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "external_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:665398156927:loadbalancer/app/webapp-3-tier-alb/5e15a18525ed8111",
            "arn_suffix": "app/webapp-3-tier-alb/5e15a18525ed8111",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "webapp-3-tier-alb-848712365.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:665398156927:loadbalancer/app/webapp-3-tier-alb/5e15a18525ed8111",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "webapp-3-tier-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-06325ee63f4cb5177"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05768bcbffb9dea54"
              },
              {
                "subnet_id": "subnet-0d011569c7ec77c97"
              }
            ],
            "subnets": [
              "subnet-05768bcbffb9dea54",
              "subnet-0d011569c7ec77c97"
            ],
            "vpc_id": "vpc-08da7c698c773a7fe",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:665398156927:loadbalancer/app/webapp-3-tier-alb/5e15a18525ed8111"
          },
          "dependencies": [
            "module.security_group.aws_security_group.external_lb_sg",
            "module.vpc.aws_subnet.public_sub_1",
            "module.vpc.aws_subnet.public_sub_2",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "internal_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:665398156927:loadbalancer/app/app-alb/24a84edea1c16eb3",
            "arn_suffix": "app/app-alb/24a84edea1c16eb3",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-app-alb-845123779.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:665398156927:loadbalancer/app/app-alb/24a84edea1c16eb3",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0dd682608b96574b6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-024cbd3e87758aad3"
              },
              {
                "subnet_id": "subnet-04f2f2d73f3a673e9"
              }
            ],
            "subnets": [
              "subnet-024cbd3e87758aad3",
              "subnet-04f2f2d73f3a673e9"
            ],
            "vpc_id": "vpc-08da7c698c773a7fe",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:665398156927:loadbalancer/app/app-alb/24a84edea1c16eb3"
          },
          "dependencies": [
            "module.security_group.aws_security_group.external_lb_sg",
            "module.security_group.aws_security_group.internal_lb_sg",
            "module.security_group.aws_security_group.web_tier_sg",
            "module.vpc.aws_subnet.private_sub_1a",
            "module.vpc.aws_subnet.private_sub_2a",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:665398156927:listener/app/app-alb/24a84edea1c16eb3/62a760957a9b1470",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:665398156927:targetgroup/app-tg/69d6afa7ed0bc758",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:665398156927:listener/app/app-alb/24a84edea1c16eb3/62a760957a9b1470",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:665398156927:loadbalancer/app/app-alb/24a84edea1c16eb3",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:665398156927:listener/app/app-alb/24a84edea1c16eb3/62a760957a9b1470"
          },
          "dependencies": [
            "module.alb.aws_lb.internal_alb",
            "module.alb.aws_lb_target_group.app_tg",
            "module.security_group.aws_security_group.external_lb_sg",
            "module.security_group.aws_security_group.internal_lb_sg",
            "module.security_group.aws_security_group.web_tier_sg",
            "module.vpc.aws_subnet.private_sub_1a",
            "module.vpc.aws_subnet.private_sub_2a",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:665398156927:listener/app/webapp-3-tier-alb/5e15a18525ed8111/a6bbafcddd988d98",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:665398156927:targetgroup/web-tg/c6d62f2c892e2f04",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:665398156927:listener/app/webapp-3-tier-alb/5e15a18525ed8111/a6bbafcddd988d98",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:665398156927:loadbalancer/app/webapp-3-tier-alb/5e15a18525ed8111",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:665398156927:listener/app/webapp-3-tier-alb/5e15a18525ed8111/a6bbafcddd988d98"
          },
          "dependencies": [
            "module.alb.aws_lb.external_alb",
            "module.alb.aws_lb_target_group.web_tg",
            "module.security_group.aws_security_group.external_lb_sg",
            "module.vpc.aws_subnet.public_sub_1",
            "module.vpc.aws_subnet.public_sub_2",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:665398156927:targetgroup/app-tg/69d6afa7ed0bc758",
            "arn_suffix": "targetgroup/app-tg/69d6afa7ed0bc758",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:665398156927:targetgroup/app-tg/69d6afa7ed0bc758",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:665398156927:loadbalancer/app/app-alb/24a84edea1c16eb3"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "app-tg",
            "port": 4000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08da7c698c773a7fe"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:665398156927:targetgroup/app-tg/69d6afa7ed0bc758"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:665398156927:targetgroup/web-tg/c6d62f2c892e2f04",
            "arn_suffix": "targetgroup/web-tg/c6d62f2c892e2f04",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:665398156927:targetgroup/web-tg/c6d62f2c892e2f04",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:665398156927:loadbalancer/app/webapp-3-tier-alb/5e15a18525ed8111"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08da7c698c773a7fe"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:665398156927:targetgroup/web-tg/c6d62f2c892e2f04"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_NAT_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f1c8ea7d9f87c1f8",
            "arn": "arn:aws:ec2:us-east-1:665398156927:elastic-ip/eipalloc-0f1c8ea7d9f87c1f8",
            "association_id": "eipassoc-0dfa8616c9b3e18a8",
            "domain": "vpc",
            "id": "eipalloc-0f1c8ea7d9f87c1f8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ff17aab04e0a1241",
            "private_dns": "ip-10-0-1-241.ec2.internal",
            "private_ip": "10.0.1.241",
            "public_dns": "ec2-52-45-56-171.compute-1.amazonaws.com",
            "public_ip": "52.45.56.171",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "webapp-3-tier-eip-NAT-1"
            },
            "tags_all": {
              "Name": "webapp-3-tier-eip-NAT-1"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_NAT_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04acfe254df1c69bd",
            "arn": "arn:aws:ec2:us-east-1:665398156927:elastic-ip/eipalloc-04acfe254df1c69bd",
            "association_id": "eipassoc-0f257a6d4c35c2d19",
            "domain": "vpc",
            "id": "eipalloc-04acfe254df1c69bd",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00d1f9ea1fbbedde1",
            "private_dns": "ip-10-0-2-178.ec2.internal",
            "private_ip": "10.0.2.178",
            "public_dns": "ec2-100-51-21-137.compute-1.amazonaws.com",
            "public_ip": "100.51.21.137",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "webapp-3-tier-eip-NAT-2"
            },
            "tags_all": {
              "Name": "webapp-3-tier-eip-NAT-2"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f1c8ea7d9f87c1f8",
            "association_id": "eipassoc-0dfa8616c9b3e18a8",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0b6900cc527fa1009",
            "network_interface_id": "eni-0ff17aab04e0a1241",
            "private_ip": "10.0.1.241",
            "public_ip": "52.45.56.171",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05768bcbffb9dea54",
            "tags": {
              "Name": "webapp-3-tier-nat-1"
            },
            "tags_all": {
              "Name": "webapp-3-tier-nat-1"
            },
            "vpc_id": "vpc-08da7c698c773a7fe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.aws_eip.eip_NAT_1",
            "module.vpc.aws_subnet.public_sub_1",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04acfe254df1c69bd",
            "association_id": "eipassoc-0f257a6d4c35c2d19",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-04448f764cef8b400",
            "network_interface_id": "eni-00d1f9ea1fbbedde1",
            "private_ip": "10.0.2.178",
            "public_ip": "100.51.21.137",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d011569c7ec77c97",
            "tags": {
              "Name": "webapp-3-tier-nat-2"
            },
            "tags_all": {
              "Name": "webapp-3-tier-nat-2"
            },
            "vpc_id": "vpc-08da7c698c773a7fe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.aws_eip.eip_NAT_2",
            "module.vpc.aws_subnet.public_sub_2",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665398156927:route-table/rtb-0bd3df8b0bddde08d",
            "id": "rtb-0bd3df8b0bddde08d",
            "owner_id": "665398156927",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b6900cc527fa1009",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "webapp-3-tier-private-rt-1a"
            },
            "tags_all": {
              "Name": "webapp-3-tier-private-rt-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-08da7c698c773a7fe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "665398156927",
            "id": "rtb-0bd3df8b0bddde08d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.nat.aws_eip.eip_NAT_1",
            "module.nat.aws_nat_gateway.nat_1",
            "module.vpc.aws_subnet.public_sub_1",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665398156927:route-table/rtb-0690986835ee4b1c3",
            "id": "rtb-0690986835ee4b1c3",
            "owner_id": "665398156927",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b6900cc527fa1009",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "webapp-3-tier-private-rt-1b"
            },
            "tags_all": {
              "Name": "webapp-3-tier-private-rt-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-08da7c698c773a7fe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "665398156927",
            "id": "rtb-0690986835ee4b1c3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.nat.aws_eip.eip_NAT_1",
            "module.nat.aws_nat_gateway.nat_1",
            "module.vpc.aws_subnet.public_sub_1",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665398156927:route-table/rtb-0ef5158f6e25cea9d",
            "id": "rtb-0ef5158f6e25cea9d",
            "owner_id": "665398156927",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04448f764cef8b400",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "webapp-3-tier-private-rt-2a"
            },
            "tags_all": {
              "Name": "webapp-3-tier-private-rt-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-08da7c698c773a7fe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "665398156927",
            "id": "rtb-0ef5158f6e25cea9d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.nat.aws_eip.eip_NAT_2",
            "module.nat.aws_nat_gateway.nat_2",
            "module.vpc.aws_subnet.public_sub_2",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665398156927:route-table/rtb-09127064728a67baf",
            "id": "rtb-09127064728a67baf",
            "owner_id": "665398156927",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04448f764cef8b400",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "webapp-3-tier-private-rt-2b"
            },
            "tags_all": {
              "Name": "webapp-3-tier-private-rt-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-08da7c698c773a7fe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "665398156927",
            "id": "rtb-09127064728a67baf",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.nat.aws_eip.eip_NAT_2",
            "module.nat.aws_nat_gateway.nat_2",
            "module.vpc.aws_subnet.public_sub_2",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e7733b1b3b2bc14",
            "region": "us-east-1",
            "route_table_id": "rtb-0bd3df8b0bddde08d",
            "subnet_id": "subnet-024cbd3e87758aad3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.aws_eip.eip_NAT_1",
            "module.nat.aws_nat_gateway.nat_1",
            "module.nat.aws_route_table.private_rt_1a",
            "module.vpc.aws_subnet.private_sub_1a",
            "module.vpc.aws_subnet.public_sub_1",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b78e08bf37c6c4c5",
            "region": "us-east-1",
            "route_table_id": "rtb-0690986835ee4b1c3",
            "subnet_id": "subnet-05154f8730255e684"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.aws_eip.eip_NAT_1",
            "module.nat.aws_nat_gateway.nat_1",
            "module.nat.aws_route_table.private_rt_1b",
            "module.vpc.aws_subnet.private_sub_1b",
            "module.vpc.aws_subnet.public_sub_1",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03021f9b33f2c4e48",
            "region": "us-east-1",
            "route_table_id": "rtb-0ef5158f6e25cea9d",
            "subnet_id": "subnet-04f2f2d73f3a673e9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.aws_eip.eip_NAT_2",
            "module.nat.aws_nat_gateway.nat_2",
            "module.nat.aws_route_table.private_rt_2a",
            "module.vpc.aws_subnet.private_sub_2a",
            "module.vpc.aws_subnet.public_sub_2",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c549a325b931d48b",
            "region": "us-east-1",
            "route_table_id": "rtb-09127064728a67baf",
            "subnet_id": "subnet-03faf6006ccbc1886"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.aws_eip.eip_NAT_2",
            "module.nat.aws_nat_gateway.nat_2",
            "module.nat.aws_route_table.private_rt_2b",
            "module.vpc.aws_subnet.private_sub_2b",
            "module.vpc.aws_subnet.public_sub_2",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665398156927:security-group/sg-09dff1126ff8fbe9b",
            "description": "Security group for database",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09dff1126ff8fbe9b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-068c740571e9887a7"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "database_sg",
            "name_prefix": "",
            "owner_id": "665398156927",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08da7c698c773a7fe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "665398156927",
            "id": "sg-09dff1126ff8fbe9b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.external_lb_sg",
            "module.security_group.aws_security_group.internal_lb_sg",
            "module.security_group.aws_security_group.private_servers_sg",
            "module.security_group.aws_security_group.web_tier_sg",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "external_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665398156927:security-group/sg-06325ee63f4cb5177",
            "description": "Security group for External Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06325ee63f4cb5177",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "External_LB_SG",
            "name_prefix": "",
            "owner_id": "665398156927",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08da7c698c773a7fe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "665398156927",
            "id": "sg-06325ee63f4cb5177",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "internal_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665398156927:security-group/sg-0dd682608b96574b6",
            "description": "Security group for internal Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dd682608b96574b6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP from web tier",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c2a3ff784778e182"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "internal_LB_SG",
            "name_prefix": "",
            "owner_id": "665398156927",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08da7c698c773a7fe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "665398156927",
            "id": "sg-0dd682608b96574b6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.external_lb_sg",
            "module.security_group.aws_security_group.web_tier_sg",
            "module.vpc.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_servers_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665398156927:security-group/sg-068c740571e9887a7",
            "description": "Security group for private servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-068c740571e9887a7",
            "ingress": [
              {
                "cidr_blocks": [
                  "217.55.137.98/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 4000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dd682608b96574b6"
                ],
                "self": false,
                "to_port": 4000
              }
            ],
            "name": "private_servers_sg",
            "name_prefix": "",
            "owner_id": "665398156927",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08da7c698c773a7fe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "665398156927",
            "id": "sg-068c740571e9887a7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.external_lb_sg",
            "module.security_group.aws_security_group.internal_lb_sg",
            "module.security_group.aws_security_group.web_tier_sg",
            "module.vpc.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_tier_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665398156927:security-group/sg-0c2a3ff784778e182",
            "description": "Security group for web tier",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c2a3ff784778e182",
            "ingress": [
              {
                "cidr_blocks": [
                  "217.55.137.98/32"
                ],
                "description": "Allow HTTPS traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTP from external ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06325ee63f4cb5177"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web_tier_sg",
            "name_prefix": "",
            "owner_id": "665398156927",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-08da7c698c773a7fe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "665398156927",
            "id": "sg-0c2a3ff784778e182",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.external_lb_sg",
            "module.vpc.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665398156927:internet-gateway/igw-08796189a9db9edb4",
            "id": "igw-08796189a9db9edb4",
            "owner_id": "665398156927",
            "region": "us-east-1",
            "tags": {
              "Name": "webapp-3-tier-igw"
            },
            "tags_all": {
              "Name": "webapp-3-tier-igw"
            },
            "vpc_id": "vpc-08da7c698c773a7fe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665398156927:route-table/rtb-06d34134c75174328",
            "id": "rtb-06d34134c75174328",
            "owner_id": "665398156927",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08796189a9db9edb4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "webapp-3-tier-public-rt"
            },
            "tags_all": {
              "Name": "webapp-3-tier-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08da7c698c773a7fe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "665398156927",
            "id": "rtb-06d34134c75174328",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main_igw",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f2b5412fa18cb07",
            "region": "us-east-1",
            "route_table_id": "rtb-06d34134c75174328",
            "subnet_id": "subnet-05768bcbffb9dea54"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main_igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_sub_1",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1b95c2f46305de1",
            "region": "us-east-1",
            "route_table_id": "rtb-06d34134c75174328",
            "subnet_id": "subnet-0d011569c7ec77c97"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main_igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_sub_2",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665398156927:subnet/subnet-024cbd3e87758aad3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024cbd3e87758aad3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "665398156927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "webapp-3-tier-private-sub-1a"
            },
            "tags_all": {
              "Name": "webapp-3-tier-private-sub-1a"
            },
            "vpc_id": "vpc-08da7c698c773a7fe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "665398156927",
            "id": "subnet-024cbd3e87758aad3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665398156927:subnet/subnet-05154f8730255e684",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05154f8730255e684",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "665398156927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "webapp-3-tier-private-sub-1b"
            },
            "tags_all": {
              "Name": "webapp-3-tier-private-sub-1b"
            },
            "vpc_id": "vpc-08da7c698c773a7fe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "665398156927",
            "id": "subnet-05154f8730255e684",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665398156927:subnet/subnet-04f2f2d73f3a673e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f2f2d73f3a673e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "665398156927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "webapp-3-tier-private-sub-2a"
            },
            "tags_all": {
              "Name": "webapp-3-tier-private-sub-2a"
            },
            "vpc_id": "vpc-08da7c698c773a7fe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "665398156927",
            "id": "subnet-04f2f2d73f3a673e9",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665398156927:subnet/subnet-03faf6006ccbc1886",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03faf6006ccbc1886",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "665398156927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "webapp-3-tier-private-sub-2b"
            },
            "tags_all": {
              "Name": "webapp-3-tier-private-sub-2b"
            },
            "vpc_id": "vpc-08da7c698c773a7fe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "665398156927",
            "id": "subnet-03faf6006ccbc1886",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665398156927:subnet/subnet-05768bcbffb9dea54",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05768bcbffb9dea54",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "665398156927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "webapp-3-tier-public-sub-1"
            },
            "tags_all": {
              "Name": "webapp-3-tier-public-sub-1"
            },
            "vpc_id": "vpc-08da7c698c773a7fe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "665398156927",
            "id": "subnet-05768bcbffb9dea54",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665398156927:subnet/subnet-0d011569c7ec77c97",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d011569c7ec77c97",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "665398156927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "webapp-3-tier-public-sub-2"
            },
            "tags_all": {
              "Name": "webapp-3-tier-public-sub-2"
            },
            "vpc_id": "vpc-08da7c698c773a7fe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "665398156927",
            "id": "subnet-0d011569c7ec77c97",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665398156927:vpc/vpc-08da7c698c773a7fe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0946825a0a093ec61",
            "default_route_table_id": "rtb-0de071512ca91bab0",
            "default_security_group_id": "sg-0f804a72dedf39396",
            "dhcp_options_id": "dopt-0c2b3d465a22a3d22",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08da7c698c773a7fe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0de071512ca91bab0",
            "owner_id": "665398156927",
            "region": "us-east-1",
            "tags": {
              "Name": "webapp-3-tier-vpc"
            },
            "tags_all": {
              "Name": "webapp-3-tier-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "665398156927",
            "id": "vpc-08da7c698c773a7fe",
            "region": "us-east-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}